--- a/assets/css/restaurant.css
+++ b/assets/css/restaurant.css
@@ -1,20 +1,28 @@
+
+
 ul {
     list-style-type: none;
     margin: 80px;
     padding: 0;
     overflow: hidden;
     background-color: rgb(240, 176, 86);
-    
-    
+    z-index: 0;
+
   }
-  nav-iteem{
+  
+  .nav-iteem{
     position: fixed;
+    overflow: hidden;
     top: 0;
     width: 90%;
+    
   }
 
-  .nav-item a{ 
+  .nav-iteem a{ 
     display: block;
+    float: hidden;
+    z-index: 9999;
+    
   }
   
   li {
@@ -27,13 +35,14 @@ ul {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    z-index: 999;
   }
   
   li a:hover {
     background-color: rgb(250, 248, 248);
   }
 
-  .active {
+  li active {
   background-color: #1251af;
 }
 
@@ -43,30 +52,12 @@ ul {
 
 .main {
     margin-top: 30px; /* Add a top margin to avoid content overlay */
+    padding: 16px;
+    z-index: 9999;
+   
+    
   }
 
-
-
-
-/* .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 40%;
-    border-radius: 5px;
-  }
-  
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
-  .img {
-    border-radius: 5px 5px 0 0;
-  }
-  
-  .container {
-    padding: 2px 16px;
-  }
- */
 
   .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
