--- a/assets/css/carandladies.css
+++ b/assets/css/carandladies.css
@@ -1,4 +1,4 @@
-.myboxx{/* image */
+.mybox{/* image */
     position: relative;
     display: block; /* Make the width of box same as image */
 }
@@ -35,7 +35,7 @@
     font-weight: bolder;
   }
 
-.mytextt{
+.mytext{
   position: absolute; 
   bottom: 0; 
   background: rgb(223, 121, 5);
@@ -49,6 +49,6 @@
   padding: 10px;
   text-align: center;
 }
-.myboxx:hover .mytextt{
+.mybox:hover .mytext{
   opacity: 1;
 }
