--- a/assets/css/car_and_ladies.css
+++ b/assets/css/car_and_ladies.css
@@ -1,4 +1,4 @@
-.mybox{/* image */
+.myboxx{/* image */
     position: relative;
     display: block; /* Make the width of box same as image */
 }
@@ -35,7 +35,7 @@
     font-weight: bolder;
   }
 
-.mytext{
+.mytextt{
   position: absolute; 
   bottom: 0; 
   background: rgb(223, 121, 5);
@@ -49,6 +49,6 @@
   padding: 10px;
   text-align: center;
 }
-.mybox:hover .mytext{
+.myboxx:hover .mytextt{
   opacity: 1;
 }
