--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -18438,7 +18438,7 @@ Calaendar icon input[type="date"]::-webkit-calendar-picker-indicator {
 
 .clickr-tabs .nav-link {
   border: 2px solid transparent;
-  color: #9E9E9E;
+  /* color: #9E9E9E; */
   font-weight: 700;
 }
 
